plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springdoc.openapi-gradle-plugin' version '1.9.0'
}

group = 'clf.integra'
version = '0.0.1-SNAPSHOT'
description = 'Bank App Backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    mockitoAgent
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Postgres
    runtimeOnly 'org.postgresql:postgresql'
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // Open API
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    // Junit + Mockito
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.+'
    testImplementation "org.mockito:mockito-core:5.+"
    testImplementation "org.mockito:mockito-inline:5.2.0"
    mockitoAgent('org.mockito:mockito-core:5.14.0') {
        transitive = false
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks {
    test {
        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
        jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
    }
}

openApi {
    apiDocsUrl.set("http://localhost:8080/v3/api-docs.yaml")
}
